--- a/sass/base/_font.scss
+++ b/sass/base/_font.scss
@@ -1,14 +1,14 @@
 @font-face {
     font-family: notoSans;
-    src: url('../../fonts/NotoSansCJKtc-Thin.otf');
+    src: url('../fonts/NotoSansCJKtc-Thin.otf');
 }
 @font-face {
     font-family: notoSans_r;
-    src: url('../../fonts/NotoSansCJKtc-Regular.otf');
+    src: url('../fonts/NotoSansCJKtc-Regular.otf');
 }
 @font-face {
     font-family: notoSans_b;
-    src: url('../../fonts/NotoSansCJKtc-Black.otf');
+    src: url('../fonts/NotoSansCJKtc-Black.otf');
 }
 body{
     font-family: notoSans;
