--- a/sass/modules/_halfway_house_detail.scss
+++ b/sass/modules/_halfway_house_detail.scss
@@ -4,7 +4,7 @@
     position: relative;
     margin-left: 200px;
     .banner {
-        background-image: url(../../images/33184672765_a14d959f8b_o.jpg);
+        background-image: url(../images/33184672765_a14d959f8b_o.jpg);
         width: 90%;
         height: 500px;
         margin: auto;
