--- a/css/catContent.css
+++ b/css/catContent.css
@@ -40,15 +40,15 @@ table {
 
 @font-face {
   font-family: notoSans;
-  src: url("../../fonts/NotoSansCJKtc-Thin.otf"); }
+  src: url("../fonts/NotoSansCJKtc-Thin.otf"); }
 
 @font-face {
   font-family: notoSans_r;
-  src: url("../../fonts/NotoSansCJKtc-Regular.otf"); }
+  src: url("../fonts/NotoSansCJKtc-Regular.otf"); }
 
 @font-face {
   font-family: notoSans_b;
-  src: url("../../fonts/NotoSansCJKtc-Black.otf"); }
+  src: url("../fonts/NotoSansCJKtc-Black.otf"); }
 
 body {
   font-family: notoSans;
@@ -243,7 +243,7 @@ header {
 header
 ul li:nth-child(1) {
   background-color: #fff;
-  box-shadow: -2px 3px 5px rgba(63, 62, 62, 0.199); }
+  box-shadow: -3px 3px 5px rgba(63, 62, 62, 0.199); }
 
 header
 ul li:nth-child(1) a {
