--- a/css/halfway_house_search.css
+++ b/css/halfway_house_search.css
@@ -41,15 +41,15 @@ table {
 
 @font-face {
   font-family: notoSans;
-  src: url("../../fonts/NotoSansCJKtc-Thin.otf"); }
+  src: url("../fonts/NotoSansCJKtc-Thin.otf"); }
 
 @font-face {
   font-family: notoSans_r;
-  src: url("../../fonts/NotoSansCJKtc-Regular.otf"); }
+  src: url("../fonts/NotoSansCJKtc-Regular.otf"); }
 
 @font-face {
   font-family: notoSans_b;
-  src: url("../../fonts/NotoSansCJKtc-Black.otf"); }
+  src: url("../fonts/NotoSansCJKtc-Black.otf"); }
 
 body {
   font-family: notoSans;
@@ -125,7 +125,7 @@ body {
 header
 ul li:nth-child(2) {
   background-color: #fff;
-  box-shadow: -2px 3px 5px rgba(63, 62, 62, 0.199); }
+  box-shadow: -3px 3px 5px rgba(63, 62, 62, 0.199); }
 
 header
 ul li:nth-child(2) a {
@@ -150,7 +150,7 @@ ul li:nth-child(2):after {
   position: relative;
   margin-left: 200px;
   padding-bottom: 200px;
-  background-image: url(../../images/marble.jpg);
+  background-image: url(../images/marble.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 0; }
