--- a/css/halfway_house_detail.css
+++ b/css/halfway_house_detail.css
@@ -189,52 +189,61 @@ ul li:nth-child(2):after {
 }
 
 .right {
-  background-color: #D3DAE2;
+  background-image: url(../../images/marble.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
   margin-left: 200px;
+  padding-top: 100px;
 }
 
 .right .banner {
-  background-image: url(../../images/33184672765_a14d959f8b_o.jpg);
+  background-image: url(../../images/halfdetail1.jpg);
+  background-position: 50%;
+  background-repeat: no-repeat;
   width: 90%;
-  height: 500px;
+  height: 700px;
   margin: auto;
+  position: relative;
 }
 
-.right .banner .text {
+.right .banner h2 {
+  background-color: rgba(34, 103, 182, 0.7);
   color: #000;
-  font-size: 100px;
-  width: 100%;
-  padding-top: 5%;
+  font-size: 30px;
+  width: 30%;
   text-align: center;
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  padding: 20px;
 }
 
-.right .intro {
-  width: 45%;
+.right .banner .intro {
+  width: 55%;
   position: absolute;
-  top: 10%;
-  left: 3%;
-  font-size: 20px;
-  line-height: 32px;
+  top: 400px;
+  left: -3%;
+  font-size: 18px;
+  line-height: 2.0;
   padding: 20px;
   background-color: rgba(35, 204, 204, 0.7);
   z-index: 1;
 }
 
-.right .contact {
+.right .banner .contact {
   width: 30%;
   position: absolute;
-  top: 13%;
-  left: 68%;
-  font-size: 20px;
-  line-height: 32px;
+  top: 450px;
+  left: 73%;
+  font-size: 18px;
+  line-height: 2.0;
   padding: 20px;
   background-color: rgba(0, 153, 102, 0.7);
   z-index: 1;
 }
 
 .right .halfwaypic {
-  width: 90%;
   margin: 5% auto;
 }
 
@@ -243,12 +252,20 @@ ul li:nth-child(2):after {
   justify-content: space-around;
 }
 
-.right .halfwaypic .container img {
-  width: 85%;
+.right .halfwaypic .container .picture {
+  width: 25%;
+  margin: 0 10px;
+}
+
+.right .halfwaypic .container .picture img {
+  width: 100%;
 }
 
 .right .cat {
-  background-color: #cc9;
+  background-image: url(../../images/catbg.jpeg);
+  background-position: bottom 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
   overflow: hidden;
 }
@@ -268,13 +285,7 @@ ul li:nth-child(2):after {
 .right .cat .flycat:nth-child(3) {
   position: absolute;
   top: -2%;
-  left: 48%;
-}
-
-.right .cat .flycat:nth-child(4) {
-  position: absolute;
-  top: -2%;
-  left: 90%;
+  left: 85%;
 }
 
 @keyframes aa {
@@ -288,7 +299,7 @@ ul li:nth-child(2):after {
   margin: auto;
   padding: 5%;
   text-align: center;
-  font-size: 50px;
+  font-size: 30px;
 }
 
 .right .cat .container {
@@ -297,84 +308,123 @@ ul li:nth-child(2):after {
   padding-bottom: 5%;
 }
 
-.right .cat .container .text {
-  font-size: 20px;
-  line-height: 30px;
+.right .cat .container .threecat {
+  position: relative;
 }
 
-.right .cat .container .text h3 {
+.right .cat .container .threecat .favorite {
+  position: absolute;
+  top: 5px;
+  right: 33px;
+  color: #fa3737;
   font-size: 30px;
+  z-index: 3;
+}
+
+.right .cat .container .threecat img {
+  width: 90%;
+}
+
+.right .cat .container .threecat .text {
+  font-size: 18px;
+  line-height: 1.71429;
+}
+
+.right .cat .container .threecat .text h3 {
+  font-size: 24px;
   font-weight: bold;
 }
 
-.right .cat img {
-  width: 250px;
-}
-
-.map {
-  width: 90%;
+.right .map {
+  width: 60%;
   margin: auto;
-  text-align: center;
+  padding-bottom: 5%;
 }
 
-.map h2 {
+.right .map h2 {
   width: 90%;
   margin: auto;
   padding: 5%;
   text-align: center;
-  font-size: 50px;
+  font-size: 30px;
 }
 
-.map img {
+.right .map img {
   width: 100%;
 }
 
-.talk .container {
+.right .talk {
+  background-image: url(../../images/talk.jpg);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 3%;
+}
+
+.right .talk .container {
   width: 70%;
   margin: 0 auto;
 }
 
-.talk .container:after {
+.right .talk .container:after {
   content: '';
   display: block;
   clear: both;
 }
 
-.talk .container h2 {
+.right .talk .container h2 {
   width: 90%;
   margin: auto;
   padding: 5%;
   text-align: center;
-  font-size: 50px;
+  font-size: 30px;
 }
 
-.talk .container .article {
+.right .talk .container .article {
   padding: 5px;
   margin-bottom: 5%;
   width: 55%;
   float: left;
-  background: #58a;
+  background: rgba(85, 136, 170, 0.788);
   border-radius: 20px;
 }
 
-.talk .container .article:nth-child(3), .talk .container .article:nth-child(5) {
+.right .talk .container .article:nth-child(3), .right .talk .container .article:nth-child(5) {
   float: right;
 }
 
-.talk .container .article p {
+.right .talk .container .article h3 {
+  font-size: 24px;
+  color: #EAAF88;
+  padding: 10px;
+}
+
+.right .talk .container .article p {
   border: 1px dashed #fff;
   border-left: none;
   border-right: none;
   border-radius: 20px;
-  color: #ccc;
-  margin: 0;
+  color: #ddd;
   min-height: 40px;
-  padding: 10px;
   position: relative;
+  padding: 10px;
+  font-size: 14px;
+  line-height: 1.42857;
 }
 
-.talk .container .article p:before,
-.talk .container .article p:after {
+.right .talk .container .article p a {
+  display: flex;
+  justify-content: flex-end;
+  text-decoration: none;
+  color: #EAAF88;
+}
+
+.right .talk .container .article p a:hover {
+  color: #ddd;
+}
+
+.right .talk .container .article p:before,
+.right .talk .container .article p:after {
   content: "";
   display: block;
   width: 12px;
@@ -386,7 +436,7 @@ ul li:nth-child(2):after {
   left: 100px;
 }
 
-.talk .container .article p:after {
+.right .talk .container .article p:after {
   height: 10px;
   width: 10px;
   bottom: -7px;
